[package]
name = "extra_waiters"
version = "1.0.1"
authors = ["Patrik Buhring <patrikbuhring@gmail.com>"]
edition = "2018"
description = "Wait for notifications without a Mutex"
readme = "./README.md"
repository = "https://github.com/OptimisticPeach/extra_waiters"
license = "MIT OR Apache-2.0"
keywords = ["multithreaded", "condvar", "waiter", "once"]
categories = ["caching", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot_core = "0.8.5"
